add google platform library and client id

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<meta name="google-signin-client_id" content="143513081999-fg4liad58qlqle84kd1ogs6o3nuieuh6.apps.googleusercontent.com">
 <html lang="en">
 <head>
   <meta charset="utf-8">
