add google signin button

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
-<script src="https://apis.google.com/js/platform.js" async defer></script>
-<meta name="google-signin-client_id" content="143513081999-fg4liad58qlqle84kd1ogs6o3nuieuh6.apps.googleusercontent.com">
 <html lang="en">
 <head>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <meta charset="utf-8">
   <title>GSignInOut</title>
   <base href="/">
@@ -11,6 +10,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-kaapier></app-kaapier>
 </body>
 </html>
